--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,6 +9,7 @@ body{
 .gameArea{
   min-height:450px;
   position: relative;
+  overflow: hidden;
 }
 
 .circle {
@@ -75,12 +76,22 @@ body{
   display: inline-block;
 }
 
+.noSelect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 .chat{
   margin-right: 10px!important;
   margin-left: 10px!important;
-  height: 90px;
-  -webkit-mask-image: -webkit-gradient(linear, left 60%, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)))
-
+  padding-bottom: 20px!important;
+  height: 110px;
+  -webkit-mask-image: -webkit-gradient(linear, left 60%, left bottom, from(rgba(0,0,0,1)), to(rgba(0,0,0,0)));
+  overflow-y: auto;
 }
 .chat .content{
   text-align: left;
