--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,8 +6,14 @@ body{
   margin: 30px 0!important;
 }
 
+.game {
+  transition: all .7s linear;
+  opacity: 0;
+}
+
 .gameArea{
   min-height:450px;
+  width: 740px!important;
   position: relative;
   overflow: hidden;
 }
@@ -66,14 +72,35 @@ body{
 .circle .relative > .message{
   font-size: 11px;
   position: absolute;
-  top: -22px;
+  bottom: 75px;
   line-height: 14px;
   color: #333;
   background-color: #f1f1f1;
+  border-radius: 9px;
+  box-shadow: 0 1px 1px #7c7c7c;
   padding: 3px 5px;
+  right: 0;
   left: 0;
-  width: 100%;
-  display: inline-block;
+  text-align: center;
+  width: auto;
+  height: auto;
+  opacity: 0;
+  transition: all .2s linear;
+  margin-bottom:-30px;
+  transform: scale(0);
+  word-break: break-word;
+}
+
+.newMessageIn {
+  opacity: 1!important;
+  margin-bottom: 0!important;
+  transform: scale(1)!important;
+}
+
+.newMessageOut {
+  opacity: 0;
+  margin-top: 30px;
+  display: none;
 }
 
 .noSelect {
